# react-native-zcoin-sigma

./: .gitmodules  README.md  index.js  package.json  react-native-zcoin-sigma.podspec  update_libsigma_submodule.sh
android/: CMakeLists.txt  build.gradle
android/gradle/wrapper/: gradle-wrapper.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/zcoin/sigma/: CoinDenomination.java  CoinSpend.java  GroupElement.java  Params.java  PrivateCoin.java  PublicCoin.java  RNZcoinSigmaModule.java  RNZcoinSigmaPackage.java  RNativeObject.java  Scalar.java  Sigma.java  SigmaPrimitives.java  SpendMetaData.java  Util.java
android/src/main/jniLibs/: CoreJni.h  Utils.cpp  Utils.h  com_zcoin_sigma_CoinSpend.cpp  com_zcoin_sigma_CoinSpend.h  com_zcoin_sigma_GroupElement.cpp  com_zcoin_sigma_GroupElement.h  com_zcoin_sigma_Params.cpp  com_zcoin_sigma_Params.h  com_zcoin_sigma_PrivateCoin.cpp  com_zcoin_sigma_PrivateCoin.h  com_zcoin_sigma_PublicCoin.cpp  com_zcoin_sigma_PublicCoin.h  com_zcoin_sigma_Scalar.cpp  com_zcoin_sigma_Scalar.h  com_zcoin_sigma_Sigma.cpp  com_zcoin_sigma_Sigma.h  com_zcoin_sigma_SigmaPrimitives.cpp  com_zcoin_sigma_SigmaPrimitives.h  libsigma
ios/: Utils.cpp  Utils.h  libsigma
